Update 1 City Skyline.html

--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
@@ -1,3 +1,41 @@
 <!-- Step 1
 Welcome to the CSS Variables Skyline project! Start by adding the !DOCTYPE html declaration at the top of the document 
 so the browser knows what type of document it's reading. -->
+
+<!DOCTYPE html>
+
+
+<!-- Step 2
+Add opening and closing html tags below the DOCTYPE so you have a place to start putting some code. -->
+
+<html></html>
+
+
+<!-- Step 3
+Next, add opening and closing head and body tags within the html element. -->
+
+<html>
+  <head></head>
+  <body></body>
+</html>
+
+
+<!-- Step 4
+Add a title element to the head, and give your project a title of City Skyline. Also, nest a self-closing link element in the head element. 
+Give it a rel attribute value of stylesheet, a type attribute value of text/css, and an href attribute value of styles.css. -->
+
+  <head>
+    <title>City Skyline</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+
+
+<!-- Step 5
+In CSS, you can target everything with an asterisk. Add a border to everything by using the * selector, and giving it a border of 1px solid black. 
+This is a trick I like to use to help visualize where elements are and their size. You will remove this later. -->
+
+* {
+  border: 1px solid black;
+}
+
+
