--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
@@ -39,3 +39,55 @@ This is a trick I like to use to help visualize where elements are and their siz
 }
 
 
+<!-- Step 6
+Also add a box-sizing of border-box to everything. This will make it so the border you added doesn't add any size to your elements. -->
+
+* {
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+
+<!-- Step 7
+You can see the body (it's the inner-most box on your page); the box around it is the html element. 
+Make your body fill the whole viewport by giving it a height of 100vh. Remove the default margin from the body by setting the margin to 0. 
+Finally, set the overflow property to hidden to hide any scroll bars that appear when something extends past the viewport. -->
+
+body {
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
+
+
+<!-- Step 8
+Create a div element in the body with a class of background-buildings. This will be a container for a group of buildings. -->
+
+  <body>
+    <div class="background-buildings"></div>
+  </body>
+
+
+<!-- Step 9
+Give your background buildings element a width and height of 100% to make it the full width and height of its parent, the body. -->
+
+.background-buildings {
+  width: 100%;
+  height: 100%;
+}
+
+
+<!-- Step 10
+Nest a div with a class of bb1 in the background buildings container. Open your styles.css file, and give .bb1 a width of 10% and height of 70%. 
+"bb" stands for "background building", this will be your first building. -->
+
+    <div class="background-buildings">
+      <div class="bb1"></div>
+    </div>
+
+.bb1 {
+  width: 10%;
+  height: 70%;
+}  
+
+
