--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
@@ -91,3 +91,79 @@ Nest a div with a class of bb1 in the background buildings container. Open your 
 }  
 
 
+<!-- Step 11
+Nest four div elements in the .bb1 container. Give them the classes bb1a, bb1b, bb1c, and bb1d in that order. This building will have four sections. -->
+
+      <div class="bb1">
+        <div class="bb1a"></div>
+        <div class="bb1b"></div>
+        <div class="bb1c"></div>
+        <div class="bb1d"></div>
+      </div>
+
+
+<!-- Step 12
+Give the parts of your building width and height properties with these values: 70% and 10% to .bb1a, 80% and 10% to .bb1b, 90% and 10% to .bb1c, 
+and 100% and 70% to .bb1d. 
+Remember that these percentages are relative to the parent and note that the heights will add up to 100% - vertically filling the container. -->
+
+.bb1a {
+  width: 70%;
+  height: 10%;
+}
+
+.bb1b {
+  width: 80%;
+  height: 10%;
+}
+
+.bb1c {
+  width: 90%;
+  height: 10%;
+}
+
+.bb1d {
+  width: 100%;
+  height: 70%;
+}
+
+
+<!-- Step 13
+Give your .bb1 element these style properties: display: flex;, flex-direction: column;, and align-items: center;. 
+This will center the parts of the building using "flex" or "flexbox". You will learn about it in more detail on another project. -->
+
+.bb1 {
+  width: 10%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+<!-- Step 14
+Now you have something that is starting to resemble a building. Let's get into your first variable. 
+Variable declarations begin with two dashes (-) and are given a name and a value like this: --variable-name: value;. In the .bb1 class, 
+create a variable named --building-color1 and give it a value of #999. -->
+
+.bb1 {
+  width: 10%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  --building-color1: #999;
+}
+
+
+<!-- Step 15
+To use a variable, put the variable name in parentheses with var in front of them like this: var(--variable-name). Add your variable as the value of the 
+background-color property of the .bb1a class. Whatever value you gave the variable will be applied to whatever property you use it on. In this case, 
+your variable has the value of #999. So #999 will be used as the value for the background-color property. -->
+
+.bb1a {
+  width: 70%;
+  height: 10%;
+  background-color: var(--building-color1);
+}
+
