--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
@@ -167,3 +167,77 @@ your variable has the value of #999. So #999 will be used as the value for the b
   background-color: var(--building-color1);
 }
 
+
+<!-- Step 16
+Use the same variable as the background-color of the .bb1b, .bb1c, and .bb1d classes to fill in the rest of the building. -->
+
+.bb1b {
+  width: 80%;
+  height: 10%;
+  background-color: var(--building-color1);
+  
+}
+
+.bb1c {
+  width: 90%;
+  height: 10%;
+  background-color: var(--building-color1);
+}
+
+.bb1d {
+  width: 100%;
+  height: 70%;
+  background-color: var(--building-color1);
+}
+
+
+<!-- Step 17
+I don't really like that color. Change the value of your variable from #999 to #aa80ff and you can see how it gets applied everywhere you used the variable. 
+This is the main advantage of using variables, being able to quickly change many values in your stylesheet by just changing the value of a variable. -->
+
+--building-color1: #aa80ff;
+
+
+<!-- Step 18
+Your first building looks pretty good now. Let's make some more! Nest three new div elements in the background-buildings container and give them 
+the classes of bb2, bb3, and bb4 in that order. These will be three more buildings for the background. -->
+
+<div class="bb2"></div>
+<div class="bb3"></div>
+<div class="bb4"></div>
+
+
+<!-- Step 19
+Give the new buildings width and height properties of: 10% and 50% for .bb2, 10% and 55% for .bb3, and 11% and 58% for .bb4. 
+You will be using almost all percent based units and some flexbox for this project, so everything will be completely responsive. -->
+
+.bb2 {
+  width: 10%;
+  height: 50%;
+}
+
+.bb3 {
+  width: 10%;
+  height: 55%;
+}
+
+.bb4 {
+  width: 11%;
+  height: 58%;
+}
+
+
+<!-- Step 20
+The buildings are stacked on top of each other and running off the screen. Let's fix that. 
+Add the properties display: flex;, align-items: flex-end;, and justify-content: space-evenly; to the background-buildings class. 
+This will use flexbox again to evenly space the buildings across the bottom of the element. -->
+
+.background-buildings {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+
