--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/1 City Skyline.html
@@ -241,3 +241,57 @@ This will use flexbox again to evenly space the buildings across the bottom of t
 }
 
 
+<!-- Step 21
+I don't like how spaced out the buildings are. Squeeze them together by adding two empty div elements to the top of the background-buildings element, 
+two more at the bottom of it, and one more in between .bb3 and .bb4. These will be added as evenly-spaced elements across the container, 
+effectively moving the buildings closer to the center. -->
+
+    <div class="background-buildings">
+      <div></div>
+      <div></div>
+      <div class="bb1">
+        <div class="bb1a"></div>
+        <div class="bb1b"></div>
+        <div class="bb1c"></div>
+        <div class="bb1d"></div>
+      </div>
+      <div class="bb2"></div>
+      <div class="bb3"></div>
+      <div></div>
+      <div class="bb4"></div>
+      <div></div>
+      <div></div>
+    </div>
+
+
+<!-- Step 22
+Create a new variable below the other one called --building-color2 and give it a value of #66cc99. Then set it as the background-color of .bb2. -->
+
+.bb1 {
+  width: 10%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+}
+
+.bb2 {
+  width: 10%;
+  height: 50%;
+  background-color: var(--building-color2);
+}
+
+
+<!-- Step 23
+Hmm, I'm not sure why that didn't work. You can add a fallback value to a variable by putting it as the second value of where you use the variable like this: 
+var(--variable-name, fallback-value). The property will use the fallback value when there's a problem with the variable. 
+Add a fallback value of green to the background-color of .bb2. -->
+
+.bb2 {
+  width: 10%;
+  height: 50%;
+  background-color: var(--building-color2, green);
+}
+
