--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
@@ -2,3 +2,33 @@
 Create a new variable below the other ones named --building-color3 and give it a value of #cc6699. 
 Then use it as the background-color of the .bb3 class and give it a fallback value of pink. -->
 
+.bb1 {
+  width: 10%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+}
+
+.bb3 {
+  width: 10%;
+  height: 55%;
+  background-color: var(--building-color3, pink);
+}
+
+
+<!-- Step 25
+That one used the fallback value as well? I see the problem now! The variables you declared in .bb1 do not cascade to the .bb2 and .bb3 sibling elements. 
+That's just how CSS works. Because of this, variables are often declared in the :root selector. This is the highest level selector in CSS; putting your variables 
+there will make them usable everywhere. Add the :root selector to the top of your stylesheet, and move all your variable declarations there. -->
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+}
+
+
