--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
@@ -32,3 +32,71 @@ there will make them usable everywhere. Add the :root selector to the top of you
 }
 
 
+<!-- Step 26
+Now that you've worked the bugs out and the buildings are the right colors, you can remove the fallback values in the two places they were used. 
+Go ahead and do that now. -->
+
+.bb2 {
+  width: 10%;
+  height: 50%;
+  background-color: var(--building-color2);
+}
+
+.bb3 {
+  width: 10%;
+  height: 55%;
+  background-color: var(--building-color3);
+}
+
+
+<!-- Step 27
+Create another variable named --building-color4 and give it a value of #538cc6. Make sure it's in the :root selector this time. 
+Then use it to fill in the last building. -->
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+  --building-color4: #538cc6;
+}
+
+.bb4 {
+  width: 11%;
+  height: 58%;
+  background-color: var(--building-color4);
+}
+
+
+<!-- Step 28
+The background buildings are starting to look pretty good. Create a new div below the background-buildings element and give it a class of foreground-buildings. 
+This will be another container for more buildings. -->
+
+<div class="foreground-buildings"></div>
+
+
+<!-- Step 29
+You want the foreground buildings container to sit directly on top of the background buildings element. Give it a width and height of 100%, 
+set the position to absolute, and the top to 0. This will make it the same size as the body and move the start of it to the top left corner. -->
+
+.foreground-buildings {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+
+<!-- Step 30
+Nest six div elements within .foreground-buildings and give them the classes of fb1 through fb6 in that order. "fb" stands for "foreground building". 
+These will be six more buildings for the foreground. -->
+
+    <div class="foreground-buildings">
+      <div class="fb1"></div>
+      <div class="fb2"></div>
+      <div class="fb3"></div>
+      <div class="fb4"></div>
+      <div class="fb5"></div>
+      <div class="fb6"></div>
+    </div>
+
+
