--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/2 City Skyline.html
@@ -100,3 +100,119 @@ These will be six more buildings for the foreground. -->
     </div>
 
 
+<!-- Step 31
+Give the six new elements these width and height values: 
+10% and 60% to .fb1, 10% and 40% to .fb2, 10% and 35% to .fb3, 8% and 45% to .fb4, 10% and 33% to .fb5, and 9% and 38% to .fb6. -->
+
+.fb1 {
+  width: 10%;
+  height: 60%;  
+}
+
+.fb2 {
+  width: 10%;
+  height: 40%;  
+}
+
+.fb3 {
+  width: 10%;
+  height: 35%;  
+}
+
+.fb4 {
+  width: 8%;
+  height: 45%;  
+}
+
+.fb5 {
+  width: 10%;
+  height: 33%;  
+}
+
+.fb6 {
+  width: 9%;
+  height: 38%;  
+}
+
+
+<!-- Step 32
+Add the same display, align-items, and justify-content properties and values to foreground-buildings that you used on background-buildings. 
+Again, this will use Flexbox to evenly space the buildings across the bottom of their container. -->
+
+.foreground-buildings {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+
+<!-- Step 33
+I see some code that can be optimized. Move the position and top properties and values from .foreground-buildings to .background-buildings. 
+Then select both .background-buildings and .foreground-buildings there, effectively applying those styles to both of the elements. 
+You can use a comma (,) to separate selectors like this: selector1, selector2. -->
+
+.background-buildings, .foreground-buildings {
+  position: absolute;
+  top: 0;
+}
+
+.background-buildings {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 0;
+}
+
+
+<!-- Step 34
+Now that you did that, you can delete the old .foreground-buildings declaration and all of its properties since they aren't needed anymore. -->
+
+
+<!-- Step 35
+The skyline is coming together. Fill in the background-color property of the foreground buildings. 
+Use your --building-color1 variable to fill in .fb3 and .fb4, --building-color2 for .fb5, --building-color3 for .fb2 and .fb6, and --building-color4 for .fb1. -->
+
+.fb1 {
+  width: 10%;
+  height: 60%;
+  background-color: var(--building-color4);
+}
+
+.fb2 {
+  width: 10%;
+  height: 40%;
+  background-color: var(--building-color3);
+}
+
+.fb3 {
+  width: 10%;
+  height: 35%;
+  background-color: var(--building-color1);
+}
+
+.fb4 {
+  width: 8%;
+  height: 45%;
+  background-color: var(--building-color1);
+}
+
+.fb5 {
+  width: 10%;
+  height: 33%;
+  background-color: var(--building-color2);
+}
+
+.fb6 {
+  width: 9%;
+  height: 38%;
+  background-color: var(--building-color3);
+}
+
+
