--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/3 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/3 City Skyline.html
@@ -315,3 +315,36 @@ The element will now have zero size and the borders will come together in the mi
 }
 
 
+<!-- Step 56
+Next, change the two #999 of .bb2a to transparent. This will make the left and right borders invisible. -->
+
+.bb2a {
+  margin: auto;
+  border-top: 1vw solid #000;
+  border-bottom: 1vw solid #000;
+  border-left: 5vw solid transparent;
+  border-right: 5vw solid transparent;
+}
+
+
+<!-- Step 57
+Remove the margin and border-top properties and values from .bb2a to turn it into a triangle for the top of the building. -->
+
+.bb2a {
+  border-bottom: 1vw solid #000;
+  border-left: 5vw solid transparent;
+  border-right: 5vw solid transparent;
+}
+
+
+<!-- Step 58
+Finally, on the border-bottom property of .bb2a, change the 1vw to 5vh and change the #000 color to your --building-color2 variable. 
+There you go, now it looks good! At any time throughout this project, you can comment out or remove the border property you added to everything at the beginning 
+to see what the buildings will look like when that gets removed at the end. -->
+
+.bb2a {
+  border-bottom: 5vh solid var(--building-color2);
+  border-left: 5vw solid transparent;
+  border-right: 5vw solid transparent;
+}
+
