--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
@@ -1,3 +1,40 @@
 <!-- Step 59
 On to the next building! 
 Create a new variable called --window-color3 in :root and give it a value of #d98cb3. This will be the secondary color for the pink buildings. -->
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+  --building-color4: #538cc6;
+  --window-color1: black;
+  --window-color2: #8cd9b3;
+  --window-color3: #d98cb3;
+}
+
+
+<!-- Step 60
+So far, all the gradients you created have gone from top to bottom, that's the default direction. 
+You can specify another direction by adding it before your colors like this:
+
+gradient-type(
+  direction,
+  color1,
+  color2
+);
+Fill in .bb3 with a repeating-linear-gradient. Use 90deg for the direction, your building-color3 for the first two colors, and window-color3 at 15% for the third. 
+When you don't specify a distance for a color, it will use the values that makes sense. 
+In this case, the first two colors will default to 0% and 7.5% because it starts at 0%, and 7.5% is half of the 15%. -->
+
+.bb3 {
+  width: 10%;
+  height: 55%;
+  background: repeating-linear-gradient(
+    90deg,
+    var(--building-color3),
+    var(--building-color3),
+    var(--window-color3) 15%
+  );
+}
+
+
