--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
@@ -116,3 +116,63 @@ comment called building-wrap. Leave it empty for now; this class will be used in
 .building-wrap {}
 
 
+<!-- Step 66
+Move the display, flex-direction, and align-items properties and values from .bb1 to the new building-wrap class. -->
+
+.building-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* BACKGROUND BUILDINGS - "bb" stands for "background building" */
+.bb1 {
+  width: 10%;
+  height: 70%;  
+}
+
+
+<!-- Step 67
+Add the new building-wrap class to the .bb1 and .bb4 elements. This will apply the centering properties to the buildings that need it. -->
+
+      <div class="bb1 building-wrap"></div>
+<!-- .................................. -->
+      <div class="bb4 building-wrap"></div>
+
+
+<!-- Step 68
+Create a new variable called --window-color4 in :root and give it a value of #8cb3d9. This will be the secondary color for the last background building. -->
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+  --building-color4: #538cc6;
+  --window-color1: black;
+  --window-color2: #8cd9b3;
+  --window-color3: #d98cb3;
+  --window-color4: #8cb3d9;
+}
+
+
+<!-- Step 69
+Nest four new div elements within .bb4c, give them all the class of bb4-window. These will be windows for this building. -->
+
+        <div class="bb4c">
+          <div class="bb1c bb4-window"></div>
+          <div class="bb1c bb4-window"></div>
+          <div class="bb1c bb4-window"></div>
+          <div class="bb1c bb4-window"></div>
+        </div>
+
+
+<!-- Step 70
+Give the bb4-window class a width of 18%, a height of 90%, and add your --window-color4 variable as the background-color. -->
+
+.bb4-window {
+  width: 18%;
+  height: 90%;
+  background-color: var(--window-color4);
+}
+
+
