--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
@@ -176,3 +176,65 @@ Give the bb4-window class a width of 18%, a height of 90%, and add your --window
 }
 
 
+<!-- Step 71
+The windows are stacked on top of each other at the left of the section, behind the purple building. 
+Add a new class below .building-wrap called .window-wrap, and add these properties to it:
+
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+This will be used in a few places to center window elements vertically, and evenly space them in their parent. -->
+
+.window-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+
+<!-- Step 72
+Add the new window-wrap class to the .bb4c element. -->
+
+        <div class="bb4c window-wrap">
+          <div class="bb4-window"></div>
+          <div class="bb4-window"></div>
+          <div class="bb4-window"></div>
+          <div class="bb4-window"></div>
+        </div>
+
+
+<!-- Step 73
+Looks good! On to the foreground buildings! Turn the .fb1 building into three sections by nesting three new div elements within it. 
+Give them the classes of fb1a, fb1b and fb1c, in that order. -->
+
+      <div class="fb1">
+        <div class="fb1a"></div>
+        <div class="fb1b"></div>
+        <div class="fb1c"></div>
+      </div>
+
+
+<!-- Step 74
+Give .fb1b a width of 60% and height of 10%, and .fb1c a width of 100% and height of 80%. -->
+
+.fb1b {
+  width: 60%;
+  height: 10%;
+}
+
+.fb1c {
+  width: 100%;
+  height: 80%;
+}
+
+
+<!-- Step 75
+Add the building-wrap class to the .fb1 element to center the sections. -->
+
+      <div class="fb1 building-wrap">
+        <div class="fb1a"></div>
+        <div class="fb1b"></div>
+        <div class="fb1c"></div>
+      </div>
+
+
