--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/4 City Skyline.html
@@ -238,3 +238,86 @@ Add the building-wrap class to the .fb1 element to center the sections. -->
       </div>
 
 
+<!-- Step 76
+Move the background-color property and value from .fb1 to .fb1b. -->
+
+.fb1 {
+  width: 10%;
+  height: 60%;  
+}
+
+.fb1b {
+  width: 60%;
+  height: 10%;
+  background-color: var(--building-color4);
+}
+
+
+<!-- Step 77
+Don't worry about the space at the bottom, everything will get moved down later when you add some height to the element at the top of the building.
+Add a repeating-linear-gradient to .fb1c with a 90deg angle, your --building-color4 from 0% to 10% and transparent from 10% to 15%. -->
+
+.fb1c {
+  width: 100%;
+  height: 80%;
+  background: repeating-linear-gradient(
+    90deg,
+    var(--building-color4) 0%,
+    var(--building-color4) 10%,
+    transparent 10%,
+    transparent 15%
+  );
+}
+
+
+<!-- Step 78
+You can add multiple gradients to an element by separating them with a comma (,) like this:
+
+gradient1(
+  colors
+),
+gradient2(
+  colors
+);
+Add a repeating-linear-gradient to .fb1c below the one that's there; use your --building-color4 from 0% to 10% and --window-color4 from 10% and 90%. 
+This will fill in behind the gradient you added last. -->
+
+.fb1c {
+  width: 100%;
+  height: 80%;
+  background: repeating-linear-gradient(
+      90deg,
+      var(--building-color4),
+      var(--building-color4) 10%,
+      transparent 10%,
+      transparent 15%
+    ),
+    repeating-linear-gradient(
+      var(--building-color4),
+      var(--building-color4) 10%,
+      var(--window-color4) 10%,
+      var(--window-color4) 90%
+    )
+}
+
+
+<!-- Step 79
+You're going to use some more border tricks for the top section. Add a border-bottom with a value of 7vh solid var(--building-color4) to .fb1a. 
+This will put a 7vh height border on the bottom. But since the element has zero size, 
+it only shows up as a 2px wide line from the 1px border that is on all the elements. -->
+
+.fb1a {
+  border-bottom: 7vh solid var(--building-color4);
+}
+
+
+<!-- Step 80
+When you increase the size of the left and right borders, the border on the bottom will expand to be the width of the combined left and right border widths. 
+Add 2vw solid transparent as the value of the border-left and border-right properties of .fb1a. 
+They will be invisible, but it will make the border on the bottom 4vw wide. -->
+
+.fb1a {
+  border-bottom: 7vh solid var(--building-color4);
+  border-left: 2vw solid transparent;
+  border-right: 2vw solid transparent;
+}
