--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
@@ -1,3 +1,52 @@
 <!-- Step 81
 On to the next building! Nest two div elements within .fb2 and give them classes of fb2a and fb2b, in that order. -->
 
+      <div class="fb2">
+        <div class="fb2a"></div>
+        <div class="fb2b"></div>
+      </div>
+
+
+<!-- Step 82
+Give .fb2a a width of 100% and .fb2b a width of 100% and height of 75%. -->
+
+.fb2a {
+  width: 100%;
+}
+
+.fb2b {
+  width: 100%;
+  height: 75%;
+}
+
+
+<!-- Step 83
+Nest three div elements within .fb2b and give them a class of fb2-window. These will be windows for this section of the building. -->
+
+        <div class="fb2b">
+          <div class="fb2-window"></div>
+          <div class="fb2-window"></div>
+          <div class="fb2-window"></div>
+        </div>
+
+
+<!-- Step 84
+Add your window-wrap class to .fb2b to position the new window elements. -->
+
+        <div class="fb2b window-wrap">
+          <div class="fb2-window"></div>
+          <div class="fb2-window"></div>
+          <div class="fb2-window"></div>
+        </div>
+
+
+<!-- Step 85
+Give the .fb2-window elements a width of 22%, height of 100%, and a background-color of your --window-color3 variable. -->
+
+.fb2-window {
+  width: 22%;
+  height: 100%;
+  background-color: var(--window-color3);
+}
+
+
