Update 5 City Skyline.html

--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
@@ -128,3 +128,59 @@ Remove the background-color property and value from .fb3, and add them to .fb3a 
 }
 
 
+<!-- Step 91
+Add your building-wrap class to the .fb3 element to center the sections. -->
+
+      <div class="fb3 building-wrap">
+        <div class="fb3a"></div>
+        <div class="fb3b"></div>
+        <div class="fb3a"></div>
+        <div class="fb3b"></div>
+      </div>
+
+
+<!-- Step 92
+Nest three new div elements in the first .fb3a element. Give them each a class of fb3-window. These will be windows for this section. -->
+
+        <div class="fb3a">
+          <div class="fb3-window"></div>
+          <div class="fb3-window"></div>
+          <div class="fb3-window"></div>
+        </div>
+
+
+<!-- Step 93
+Give the .fb3-window elements a width of 25%, a height of 80%, and use your --window-color1 variable as the background-color value. -->
+
+.fb3-window {
+  width: 25%;
+  height: 80%;
+  background-color: var(--window-color1);
+}
+
+
+<!-- Step 94
+Add your window-wrap class to the .fb3a element to center and space the windows. -->
+
+        <div class="fb3a window-wrap">
+          <div class="fb3-window"></div>
+          <div class="fb3-window"></div>
+          <div class="fb3-window"></div>
+        </div>
+
+
+<!-- Step 95
+I'm not thrilled about that black for the windows anymore. Change the --window-color1 value to #bb99ff. -->
+
+:root {
+  --building-color1: #aa80ff;
+  --building-color2: #66cc99;
+  --building-color3: #cc6699;
+  --building-color4: #538cc6;
+  --window-color1: #bb99ff;
+  --window-color2: #8cd9b3;
+  --window-color3: #d98cb3;
+  --window-color4: #8cb3d9;
+}
+
+
