--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
@@ -184,3 +184,61 @@ I'm not thrilled about that black for the windows anymore. Change the --window-c
 }
 
 
+<!-- Step 96
+Only three more building to go. Nest two new div elements within the .fb4 element and give them the classes of fb4a and fb4b, in that order. 
+Remember that you sort of flipped the location of .fb4 and .fb5, so it's the rightmost purple building you are working on now. -->
+
+      <div class="fb4">
+        <div class="fb4a"></div>
+        <div class="fb4b"></div>
+      </div>
+
+
+<!-- Step 97
+Give .fb4b a width of 100% and height of 89%. -->
+
+.fb4b {
+  width: 100%;
+  height: 89%;
+}
+
+
+<!-- Step 98
+Add your --building-color1 variable as value of the background-color property of .fb4b. Then, remove the background-color from .fb4. -->
+
+.fb4 {
+  width: 8%;
+  height: 45%;
+  position: relative;
+  left: 10%;
+}
+
+.fb4b {
+  width: 100%;
+  height: 89%;
+  background-color: var(--building-color1);
+}
+
+
+<!-- Step 99
+Nest six div elements within .fb4b and give them all a class of fb4-window. -->
+
+        <div class="fb4b">
+          <div class="fb4-window"></div>
+          <div class="fb4-window"></div>
+          <div class="fb4-window"></div>
+          <div class="fb4-window"></div>
+          <div class="fb4-window"></div>
+          <div class="fb4-window"></div>
+        </div>
+
+
+<!-- Step 100
+Give the .fb4-window elements a width of 30%, height of 10%, and border-radius of 50%. These will make some circular windows for this building. -->
+
+.fb4-window {
+  width: 30%;
+  height: 10%;
+  border-radius: 50%;
+}
+
