--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/5 City Skyline.html
@@ -242,3 +242,36 @@ Give the .fb4-window elements a width of 30%, height of 10%, and border-radius o
   border-radius: 50%;
 }
 
+
+<!-- Step 101
+Fill in the windows with your secondary color for this building. Also add a margin of 10% to give the windows some space. -->
+
+.fb4-window {
+  width: 30%;
+  height: 10%;
+  border-radius: 50%;
+  background-color: var(--window-color1);
+  margin: 10%;
+}
+
+
+<!-- Step 102
+Add display: flex and flex-wrap: wrap to the window container. This will put your windows side by side, and then push them down to a new row when they don't fit. -->
+
+.fb4b {
+  width: 100%;
+  height: 89%;
+  background-color: var(--building-color1);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+<!-- Step 103
+This building is going to have another triangle on top. Give the top section a border-top of 5vh solid transparent, 
+and a border-left that is 8vw, solid, and uses your building color variable as the color. -->
+
+.fb4a {
+  border-top: 5vh solid transparent;
+  border-left: 8vw solid var(--building-color1);
+}
