--- a/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/6 City Skyline.html
+++ b/Responsive Web Design(NEW)/14 CSS Variables by Building a City Skyline/6 City Skyline.html
@@ -138,3 +138,72 @@ Okay, the buildings are done. Go back to the * selector and remove the border yo
 }
 
 
+<!-- Step 111
+Add sky as a second class to the .background-buildings element. You are going to make a background for the skyline. -->
+
+<div class="background-buildings sky"></div>
+
+
+<!-- Step 112
+Give the sky class a radial-gradient. Use #ffcf33 from 0% to 20%, #ffff66 at 21%, and #bbeeff at 100%. 
+This will add circular gradient to the background that will be your sun. -->
+
+.sky {
+  background: radial-gradient(
+      #ffcf33,
+      #ffcf33 20%,
+      #ffff66 21%,
+      #bbeeff 100%
+    );
+}
+
+
+<!-- Step 113
+At the top of the sky gradient color list, where you would put a direction for the gradient; add circle closest-corner at 15% 15%,. 
+This will move the start of the gradient to 15% from the top and left. It will make it end at the closest-corner and it will maintain a circle shape. 
+These are some keywords built into gradients to describe how it behaves. -->
+
+.sky {
+  background: radial-gradient(    
+    circle closest-corner at 15% 15%,
+    #ffcf33,
+    #ffcf33 20%,
+    #ffff66 21%,
+    #bbeeff 100%
+    );
+}
+
+
+<!-- Step 114
+A media query can be used to change styles based on certain conditions, and they look like this:
+
+@media (condition) {
+
+}  
+Add an empty media query at the bottom of your stylesheet with a condition of max-width: 1000px. 
+Styles added in here will take effect when the document size is 1000px wide or less. -->
+
+@media (max-width: 1000px) {
+
+}  
+
+
+<!-- Step 115
+Copy and paste your whole sky class along with all of its properties and values into the media query. 
+You are going to make another color scheme for the skyline that changes it from day to night.
+
+Note: You are going to need to scroll past the editable region to copy the class. -->
+
+@media (max-width: 1000px) {
+  .sky {    
+  background: radial-gradient(
+      closest-corner circle at 15% 15%,
+      #ffcf33,
+      #ffcf33 20%,
+      #ffff66 21%,
+      #bbeeff 100%
+    );
+  }
+}
+
+
