--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/1 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/1 Magazine.html
@@ -78,3 +78,100 @@ followed by a p element with the class set to hero-subtitle and the text set to 
     </main>
 
 
+<!-- Step 6
+Your image currently takes up a lot of space. To better see what you are working on, add a width attribute to the img element, with a value of 400.
+You will remove this later on when you have worked on the CSS. -->
+
+    <main>
+      <section class="heading">
+        <header class="hero">
+          <img
+            src="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920X1080-indigo.png"
+            alt="freecodecamp logo"
+            loading="lazy"
+            class="hero-img"
+            width="400"
+          />
+          <h1 class="hero-title">OUR NEW CURRICULUM</h1>
+          <p class="hero-subtitle">
+            Our efforts to restructure our curriculum with a more project-based
+            focus
+          </p>
+        </header>
+      </section>
+    </main>
+
+
+<!-- Step 7
+After your header element, create a div with the class set to author.
+
+Within that div, create a p element with the class set to author-name and give it the text By freeCodeCamp.
+Wrap the freeCodeCamp portion in an a element with the href set to https://freecodecamp.org, and the target set to _blank.
+
+Below that, add a second p element with the class publish-date and the text March 7, 2019. -->
+
+        <div class="author">
+          <p class="author-name">By <a href="https://freecodecamp.org" target="_blank">freeCodeCamp</a></p>
+          <p class="publish-date">March 7, 2019</p>
+        </div>
+
+
+<!-- Step 8
+The Referer HTTP header contains information about the address or URL of a page that a user might be visiting from. 
+This information can be used in analytics to track how many users from your page visit freecodecamp.org, for example. 
+Setting the rel attribute to noreferrer omits this information from the HTTP request. Give your a element a rel attribute set to noreferrer. -->
+
+        <div class="author">
+          <p class="author-name">
+            By
+            <a href="https://freecodecamp.org" target="_blank" rel="noreferrer"
+              >freeCodeCamp</a
+            >
+          </p>
+          <p class="publish-date">March 7, 2019</p>
+        </div>
+
+
+<!-- Step 9
+Below your .author element, create a new div element with the class social-icons.
+
+Add five a elements within that new div, and give them the following href attributes.
+
+The first a element should have an href set to https://www.facebook.com/freecodecamp.
+The second a element should have an href set to https://twitter.com/freecodecamp.
+The third a element should have an href set to https://instagram.com/freecodecamp.
+The fourth a element should have an href set to https://www.linkedin.com/school/free-code-camp.
+The fifth a element should have an href set to https://www.youtube.com/freecodecamp. -->
+
+<div class="social-icons">
+  <a href="https://www.facebook.com/freecodecamp"></a>
+  <a href="https://twitter.com/freecodecamp"></a>
+  <a href="https://instagram.com/freecodecamp"></a>
+  <a href="https://www.linkedin.com/school/free-code-camp"></a>
+  <a href="https://www.youtube.com/freecodecamp"></a>
+</div>
+
+
+<!-- Step 10
+Within each of your new a elements, add an i element and give them the following classes:
+
+Your first i element should have the class fab fa-facebook-f
+Your second i element should have the class fab fa-twitter
+Your third i element should have the class fab fa-instagram
+Your fourth i element should have the class fab fa-linkedin-in
+Your fifth i element should have the class fab fa-youtube -->
+
+        <div class="social-icons">
+          <a href="https://www.facebook.com/freecodecamp/"><i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com/freecodecamp/"><i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com/freecodecamp"><i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/school/free-code-camp/"><i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.youtube.com/freecodecamp"><i class="fab fab fa-youtube"></i>
+          </a>
+        </div>
+
+
