--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/1 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/1 Magazine.html
@@ -175,3 +175,33 @@ Your fifth i element should have the class fab fa-youtube -->
         </div>
 
 
+<!-- Step 11
+Below your .heading element, create a new section element with the class set to text. 
+Within that, create a p element with the class set to first-paragraph and the following text:
+Soon the freeCodeCamp curriculum will be 100% project-driven learning. Instead of a series of coding challenges, you'll learn through building projects - 
+step by step. Before we get into the details, let me emphasize: we are not changing the certifications. 
+All 6 certifications will still have the same 5 required projects. We are only changing the optional coding challenges. -->
+
+<section class="text">
+  <p class="first-paragraph">Soon the freeCodeCamp curriculum will be 100% project-driven learning. 
+    Instead of a series of coding challenges, you'll learn through building projects - step by step.
+    Before we get into the details, let me emphasize: we are not changing the certifications. 
+    All 6 certifications will still have the same 5 required projects. We are only changing the optional coding challenges.</p>
+</section>
+
+
+<!-- Step 12
+Create another p element below your .first-paragraph element, and give it the following text:
+After years - years - of pondering these two problems and how to solve them, I slipped, hit my head on the sink, and when I came to I had a revelation! 
+A vision! A picture in my head! A picture of this! This is what makes time travel possible: the flux capacitor! -->
+
+      <section class="text">
+        <p class="first-paragraph">
+          Soon the freeCodeCamp curriculum will be 100% project-driven learning. Instead of a series of coding challenges, you'll learn through building projects - 
+          step by step. Before we get into the details, let me emphasize: we are not changing the certifications. 
+          All 6 certifications will still have the same 5 required projects. We are only changing the optional coding challenges.
+        </p>
+        <p>After years - years - of pondering these two problems and how to solve them, I slipped, hit my head on the sink, and when I came to I had a revelation! 
+A vision! A picture in my head! A picture of this! This is what makes time travel possible: the flux capacitor!</p>
+      </section>
+
