--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
@@ -83,3 +83,59 @@ and each p using what's on the right: -->
 <!-- Step 21
 Within your aside element, create two img elements, a blockquote element, and a third img element. Give the blockquote element a class set to image-quote. -->
 
+        <aside class="image-wrapper">
+          <img />
+          <img />
+          <blockquote class="image-quote"></blockquote>
+          <img />
+        </aside>
+
+
+<!-- Step 22
+Within the .image-wrapper element, give your first img element a src of https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png, 
+an alt of image of the quote machine project, a class of image-1, a loading attribute set to lazy, a width attribute of 600, and a height attribute of 400. -->
+
+<img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" 
+     alt="image of the quote machine project" class="image-1" loading="lazy" width="600" height="400" />
+
+
+<!-- Step 23
+Within your .image-wrapper element, give the second img element a src of https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png, 
+an alt of image of a calculator project, a loading attribute set to lazy, a class set to image-2, a width attribute set to 400, and a height attribute set to 400. -->
+
+<img 
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+            alt="image of a calculator project"
+            loading="lazy"
+            class="image-2"
+            width="400"
+            height="400"
+          />
+
+
+<!-- Step 24
+Within your .image-wrapper element, give your third img element a src of https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg, 
+an alt of four people working on code, a loading attribute of lazy, a class set to image-3, a width attribute set to 600, and a height attribute set to 400. -->
+
+<img
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
+            alt="four people working on code"
+            loading="lazy"
+            class="image-3"
+            width="600"
+            height="400"
+           />
+
+
+<!-- Step 25
+Within your .image-quote element, nest an hr element, a p element and a second hr element. 
+Give the p element a class set to quote and the text 
+The millions of people who are learning to code through freeCodeCamp will have an even better resource to help them learn these fundamentals.. -->
+
+          <blockquote class="image-quote">
+            <hr></hr>
+            <p class="quote">The millions of people who are learning to code through freeCodeCamp will have an even better resource to help them learn these fundamentals.</p>
+            <hr></hr>
+          </blockquote>
+
+
