--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -3,7 +3,9 @@
   <head></head>
   <body>
     <div>
-      <header id="header"></header>
+      <header id="header">
+        <img id="header-img">
+      </header>
     </div>
   </body>
 </html>
