--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -10,25 +10,30 @@
         <nav id="nav-bar">
           <ul>
             <li>
-              <a class="nav-link" href=""></a>
+              <a class="nav-link" href="#main">What is it?</a>
             </li>
             <li>
-              <a class="nav-link" href="#demo">Demonstration</a>
+              <a class="nav-link" href="#demo">Video demonstration</a>
             </li>
             <li>
-              <a class="nav-link" href=""></a>
+              <a class="nav-link" href="#low">Additional information</a>
             </li>
           </ul>
         </nav>
       </header>
     </div>
     <div class="container">
-      <section></section>
+      <section id="main">
+        <h2>Lorem ipsum</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper nisl a feugiat scelerisque. Praesent pretium ultrices ante quis lobortis.</p>
+      </section>
       <section id="demo">        
         <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/8bq8AG9wCnA" title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
-      <section></section>
+      <section id="low">
+
+      </section>
     </div>
   </body>
 </html>
