--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/2 Penguin.html
@@ -187,3 +187,69 @@ Position the .penguin-head element 10% from the top, and 25% from the left of it
   top: 10%;
   left: 25%;
 }
+
+
+<!-- Step 36
+Position the .penguin-body element 40% from the top, and 23.5% from the left of its parent. -->
+
+.penguin-body {
+  width: 53%;
+  height: 45%;
+  background: linear-gradient(
+    45deg,
+		rgb(134, 133, 133) 0%,
+		rgb(234, 231, 231) 25%,
+		white 67%
+	);
+  border-radius: 80% 80% 100% 100%;
+  top: 40%;
+  left: 23.5%;
+}
+
+
+<!-- Step 37
+Change the stack level of the .penguin-head element such that it appears in front of the .penguin-body element. -->
+
+.penguin-head {
+  width: 50%;
+	height: 45%;
+  background: linear-gradient(
+    45deg,
+		gray,
+		rgb(239, 240, 228)
+	);
+	border-radius: 70% 70% 65% 65%;
+  top: 10%;
+  left: 25%;
+  z-index: 1;
+}
+
+
+<!-- Step 38
+To give the penguin body a crest, create a pseudo-element that is the first child of the .penguin-body element. 
+Set the content property of the pseudo-element to an empty string. -->
+
+.penguin-body::before {
+  content: "";
+}
+
+
+<!-- Step 39
+Position the pseudo-element relative to its closest positioned ancestor. -->
+
+.penguin-body::before {
+  content: "";
+  position: absolute;
+}
+
+
+<!-- Step 40
+Give the pseudo-element a width half that of its parent, a height of 45%, and a background-color of gray. -->
+
+.penguin-body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: gray;
+}
