--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/3 Penguin.html
@@ -1,3 +1,62 @@
 <!-- Step 41
 Position the pseudo-element 10% from the top and 25% from the left of its parent. -->
 
+.penguin-body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: gray;
+  top: 10%;
+  left: 25%;
+}
+
+
+<!-- Step 42
+Round off the crest, by giving the pseudo-element bottom corners a radius of 100%, leaving the top corners at 0%. -->
+
+.penguin-body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: gray;
+  top: 10%;
+  left: 25%;
+  border-radius: 0% 0% 100% 100%;
+}
+
+
+<!-- Step 43
+Increase the psuedo-element's transparency by 30%. -->
+
+.penguin-body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: gray;
+  top: 10%;
+  left: 25%;
+  border-radius: 0% 0% 100% 100%;
+  opacity: 70%;
+}
+
+
+<!-- Step 44
+Start the penguin's face, by adding two div elements within .penguin-head, and giving them both a class of face. -->
+
+      <div class="penguin-head">
+        <div class="face"></div>
+        <div class="face"></div>
+      </div>
+
+
+<!-- Step 45
+Give the .face elements a width of 60%, a height of 70%, and a background-color of white. -->
+
+.face {
+  width: 60%;
+	height: 70%;
+  background-color: white;
+}
