--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
@@ -1,2 +1,51 @@
 <!-- Step 61
 Target the .eye-lid elements, and give them a width of 150%, height of 100%, and background-color of --penguin-face. -->
+
+.eye-lid {
+  width: 150%;
+  height: 100%;
+  background-color: var(--penguin-face);
+}
+
+
+<!-- Step 62
+Position the .eye-lid elements 25% from the top, and -23% from the left of their parents. Then, give all corners a radius of 50%. -->
+
+.eye-lid {
+  width: 150%;
+  height: 100%;
+  background-color: var(--penguin-face);
+  top: 25%;
+  left: -23%;
+  border-radius: 50%;
+}
+
+
+<!-- Step 63
+Below the .eye.right element, add two div elements each with a class of blush. 
+Also, give the first .blush element a class of left, and the second .blush element a class of right. -->
+
+<div class="blush left"></div>
+<div class="blush right"></div>
+
+
+<!-- Step 64
+Target the .blush elements, and give them a width of 15%, height of 10%, and background-color of pink. -->
+
+.blush {
+  width: 15%;
+  height: 10%;
+  background-color: pink;
+}
+
+
+<!-- Step 65
+Position the .blush elements 65% from the top of their parent, and give all corners a radius of 50%. -->
+
+.blush {
+  width: 15%;
+  height: 10%;
+  background-color: pink;
+  top: 65%;
+  border-radius: 50%;
+}
