--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/4 Penguin.html
@@ -147,3 +147,66 @@ Fix this, by targeting the div with the heart emoji, and setting its font-weight
 .shirt div {
   font-weight: initial;
 }
+
+
+<!-- Step 76
+Position the div with the heart emoji 22.5px from the top, and 12px from the left of its parent. -->
+
+.shirt div {
+  font-weight: initial;
+  top: 22.5px;
+  left: 12px;
+}
+
+
+<!-- Step 77
+Position the .shirt element 165px from the top, and 127.5px from the left of its parent. 
+Then, increase its stacking order such that it appears above the .penguin-body element. -->
+
+.shirt {
+  font: bold 25px Helvetica, sans-serif;
+  top: 165px;
+  left: 127.5px;
+  z-index: 1;
+}
+
+.shirt div {
+  font-weight:  initial;
+  top: 22.5px;
+  left: 12px;
+}
+
+
+<!-- Step 78
+For the shirt's final touch, set the color to #6a6969. -->
+
+.shirt {
+  font: bold 25px Helvetica, sans-serif;
+  top: 165px;
+  left: 127.5px;
+  z-index: 1;
+  color: #6a6969;
+}
+
+
+<!-- Step 79
+Fun fact: Penguins cannot stand without at least two feet.
+
+Within the .penguin-body element, add two div elements each with a class of foot. Give the first .foot a class of left, and the second .foot a class of right. -->
+
+      <div class="penguin-body">        
+        <div class="foot left"></div>
+        <div class="foot right"></div>
+      </div>
+
+
+<!-- Step 80
+Target the .foot elements, and give them a width of 15%, height of 30%, and background-color of orange. -->
+
+.foot {
+  width: 15%;
+  height: 30%;
+  background-color: orange;
+}
+
+
