--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/6 Penguin.html
@@ -17,3 +17,72 @@ Give wave four waypoints starting at 10%, and incrementing by 10%. -->
 }
 
 
+<!-- Step 97
+Within the first waypoint, rotate to 110deg, and retain the scaling of the left arm. -->
+
+@keyframes wave {
+  10% {
+    transform: rotate(110deg) scaleX(-1);
+  }
+  20% {
+
+  }
+  30% {
+
+  }
+  40% {
+
+  }
+}
+
+
+<!-- Step 98
+Within the second waypoint, rotate to 130deg, and retain the scaling of the left arm. -->
+
+@keyframes wave {
+  10% {
+    transform: rotate(110deg) scaleX(-1);
+  }
+  20% {
+    transform: rotate(130deg) scaleX(-1);
+  }
+  30% {
+
+  }
+  40% {
+
+  }
+}
+
+
+<!-- Step 99
+For the third and fourth waypoints, repeat the transform pattern once more. -->
+
+@keyframes wave {
+  10% {
+    transform: rotate(110deg) scaleX(-1);
+  }
+  20% {
+    transform: rotate(130deg) scaleX(-1);
+  }
+  30% {
+    transform: rotate(110deg) scaleX(-1);
+  }
+  40% {
+    transform: rotate(130deg) scaleX(-1);
+  }
+}
+
+
+<!-- Step 100
+Use the wave animation on the left arm. Have the animation last 3s, infinitely iterate, and have a linear timing function. -->
+
+.arm.left {
+  top: 35%;
+  left: 5%;
+  transform-origin: top left; 
+  transform: rotate(130deg) scaleX(-1);
+  animation: wave 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
